# b_stacktrace

./: CMakeLists.txt  LICENSE  README.md  VSOpenFileFromDirFilters.json  b_stacktrace.h  dev.cmake
example/: CMakeLists.txt  crash.c  trace.c  trace.cpp
include/: b_stacktrace.h
scratch/: CMakeLists.txt  scratch.c
